2005-05-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib.py: Add wrappers for old event handle API including a
	DeprecationWarning (this makes HEAD no longer completely defunct);
	Add checks for EventRef class type
	* src/EditPerson.py: typo
	* src/plugins/TestcaseGenerator.py:  Support for event references.

2005-05-26  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib.py (EventRef): Add class.

	* src/EditPerson.py: Support for event references.
	* src/FamilyView.py: Support for event references.
	* src/ListBox.py: Support for event references.
	* src/PedView.py: Support for event references.
	* src/RelLib.py: Support for event references.

2005-05-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/TestcaseGenerator.py: Add place, media and source
	references.
	* src/PedView.py (rebuild_trees): Resize matching is now done later by
	idle callback; (add_table_to_notebook): Work with PyGtk < 2.4;
	(format_relation): Adapt format to availably space.

2005-05-25  Alex Roitman  <shura@gramps-project.org>
	* src/EditPlace.py: WATCH cursor and temp label for References tab.
	* src/EditSource.py: Improve manipulating notebook tab labels.
	* src/Utils.py (temp_label): Add function;
	(bold_label,unbold_label): Properly set cursor to default.
	* src/gramps.glade (event editor, source editor, place editor):
	Add icons to notebook tabs. 

2005-05-25  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ScratchPad.py: disabled search because it does not do 
	  what the user expects.
	
2005-05-25  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ScratchPad.py: rename on_scratch_pad_delete_event for consistency
        * src/plugins/scratchpad.glade: add on_scratch_pad_delete_event to fix bug 
	  when window is close using the window manager close button.
	
2005-05-25  Alex Roitman  <shura@gramps-project.org>
	* src/EditSource.py (__init__): set cursor to WATCH before displaying
	references; call display_references when idle;